force-app/zurich-base/main/default/objects/ContentVersion/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <description>Identificador del documento</description>
    <label>Document Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>