force-app/zurich-base/main/default/objects/ContentVersion/fields/Guest_Record_fileupload__c.field-meta.xml
<CustomField>
    <fullName>Guest_Record_fileupload__c</fullName>
    <externalId>true</externalId>
    <label>Guest Record fileupload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>