force-app/zurich-base/main/default/objects/ContentVersion/fields/MimeType__c.field-meta.xml
<CustomField>
    <fullName>MimeType__c</fullName>
    <label>Mime type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>